# DeepLearning-Library

./: .gitignore  CMakeLists.txt  Dataset.cpp  Dataset.h  README.md  main.cpp
cmake/extra/: PVS-Studio.cmake
include/: Layer.h
include/Dataset/: Dataset.h
include/layers/: Activation.h  Convolution.h  Dense.h  Layer.h
include/models/: Model.h
include/utils/: Dataset.h  Initializer.h  Loss.h  MnistDataset.h  Optimizer.h  RandomNormal.h  SGD.h  TensorHolder.h  tensor_holder.h  tqdm.h
include/utils/cuda/: CudaMatrix.cuh  matrix_operations.cuh
include/utils/models/: Model.cpp
layers/: Dense.cpp
models/: Model.cpp
src/layers/: Activation.cpp  Dense.cpp  Layer.cpp
src/utils/: Dataset.cpp  Initializer.cpp  Optimizer.cpp  TensorHolder.cpp
src/utils/cuda/: CudaMatrix.cu  matrix_operations.cu
utils/: Initializer.cpp  Loss.cpp  Optimizer.cpp  SGD.cpp  tensor_holder.cpp
